fix: flicker input (#218)
* fix: flicker input

* chore: remove comment

--- a/packages/raystack/v1/styles/typography.css
+++ b/packages/raystack/v1/styles/typography.css
@@ -32,7 +32,6 @@ body, p, div, span {
 /* CSS for the type cursor */
 input, textarea {
   caret-color: var(--rs-color-border-accent-emphasis);
-  animation: dissolve-hide 100ms ease-out 500ms infinite;
 }
 
 @keyframes dissolve-hide {
